<resources>
    <string name="app_name">PulseIt</string>
    <string name="main_message_ui_double_back_to_close">Drücke noch einmal die Zurück-Taste, um die Anwendung zu beenden</string>
    <string name="navigation_settings">Einstellungen</string>
    <string name="navigation_addPulse">Puls hinzufügen</string>
    <string name="navigation_info">Info</string>
    <string name="navigation_analytics">Analyse</string>
    <string name="navigation_history">Verlauf</string>
    <string name="info_header">Info</string>
    <string name="info_formulaDescription">Die maximale Herzschlagfrequenz ist die Anzahl der Herzschläge pro Minute, die ein Mensch bei größtmöglicher körperlicher Anstrengung erreichen kann. In der vorliegenden App wird die maximale Herzfrequenz nach der Formel von Sally Edwards berechnet.</string>
    <string name="info_header_formula">Formeln</string>
    <string name="info_legend">x = Maximalpuls \na = Lebensalter \nm = Körpergewicht</string>
    <string name="info_formulaMale">Männlich:</string>
    <string name="info_formulaFemale">Weiblich:</string>
    <string name="info_header_overview">App-Übersicht</string>
    <string name="info_header_overview_header_settings">Einstellungen</string>
    <string name="info_header_overview_settings">In den Einstellungen werden die zur Berechnung der Formel benötigten Werte erhoben. Die Einstellungen sind in zwei Teile gegliedert.</string>
    <string name="info_overview_header_input">Eingabe</string>
    <string name="info_overview_input">Auf der Eingabeseite kann das Alter, Gewicht und Geschlecht des benutzers eingegeben und gespeichert werden.</string>
    <string name="info_overview_header_output">Ausgabe</string>
    <string name="info_overview_output">Auf der Ausgabeseite sind die aktuellen Einstellungen einsehbar und der berechnete Maximalpuls wird angezeigt. Aus ihm werden die verschiedenen Trainingszonen abgeleitet und in einem Diagramm dargestellt.</string>
    <string name="info_overview_header_addPulse">Puls hinzufügen</string>
    <string name="info_overview_addPulse">In dieser Ansicht kann ein neuer Pulseintrag gespeichert werden. Der Wert entweder manuell angegeben werden oder wird automatisch berechnet, indem der Benutzer im Rhytmus des eigenen Herzschlags auf das Herzsymbol tappt. Zusätzlich kann eine Beschreibung angegeben werden, welche dabei hilft den Eintrag später leichter wiederzufinden oder zuzuordnen.</string>
    <string name="info_overview_header_history">Verlauf</string>
    <string name="info_overview_history">Im Verlauf befindet sich eine Übersicht aller gespeicherten Pulseinträge nach Datum sortiert. Über das Lupensymbol kann nach dem Beschreibungstext eines Eintrags gesucht werden. Zum Löschen eines Eintrags kann dieser nach links gewischt werden. Der Löschvorgang kann im Anschluss kurzzeitig rückgängig gemacht werden.</string>
    <string name="info_overview_header_details">Details</string>
    <string name="info_overview_details">Wird ein Eintrag angetippt öffnet sich eine Detailansicht in der die zum Puls zugehörigen Einstellungen und Einteilung in die Trainingszonen angezeigt werden. Per Tap auf das Teilen-Symbol kann die Detailansicht als Bild in anderen Apps geteilt werden.</string>
    <string name="info_overview_header_analyse">Analyse</string>
    <string name="info_overview_analyse">In der Analyseansicht werden der Minimal-, Maximal- und Durchschnittspuls in einem ausgewählten Zeitraum berechnet. Zudem ist die Verteilung der Pulseinträge auf die verschiedenen Trainingszonen in einem Tortendiagramm erkennbar. Per Tap auf das Teilen-Symbol kann die Analyseansicht als Bild in anderen Apps geteilt werden.</string>
    <string name="info_header_range">Wertebereich der Parameter</string>
    <string name="info_parameter_age">Das Lebensalter muss GRÖßER 0 und in ganzzahligen Jahren angegeben sein.</string>
    <string name="info_parameter_weight">Das Körpergewicht muss GRÖßER 0 und in Kilogramm angegeben sein.</string>
    <string name="info_parameter_gender">Als Geschlecht muss Männlich oder Weiblich gewählt werden.</string>
    <string name="info_header_interpretation">Interpretation</string>
    <string name="info_interpretation">Eine Interpretation des Ergebnis kann anhand den zusätzlich angezeigten Tabellen ermittelt werden.</string>
    <string name="info_interpretation_gesundheitszone">50-60 % der maximalen Herzfrequenz ist die Gesundheitszone.</string>
    <string name="info_interpretation_fettverbrennungszone">60-70 % der maximalen Herzfrequenz ist die Fettverbrennungszone.</string>
    <string name="info_interpretation_aerobe_Zone">70-80 % der maximalen Herzfrequenz ist die aerobe Zone.</string>
    <string name="info_interpretation_anaerobe_Zone">80-90 % der maximalen Herzfrequenz ist die anaerobe Zone.</string>
    <string name="info_interpretation_rote_Zone">90-100 % der maximalen Herzfrequenz ist die Warnzone.</string>
    <string name="info_formula_male">$$x = 214 - (0,5 \\times a) - (0,11 \\times m) $$</string>
    <string name="info_formula_female">$$x = 226 - (0,5 \\times a) - (0,11 \\times m) $$</string>
    <string name="info_interpretation_detail_gesundheitszone">\u2022Einstiegs-/Reha-Belastungszone \n\u2022Stabilisation des Herz-Kreislauf-Systems \n\u2022Regenerationstraining \n\u2022subjektive Belastung: sehr leicht bis leicht \n\nMit der Gesundheitszone kann jeder Laufeinsteiger sein Lauftraining "gesund" starten. In dieser Zone wird die niedrigste und zugleich wichtigste Belastungszone für ein Ausdauertraining markiert. Sicherlich befindet man sich im Alltag schnell in diesem Bereich, wenn man kurzfristig beginnt zu Laufen, um den Bus noch zu erreichen. Wir wollen uns in der Gesundheitszone aber gezielt über einen längeren Zeitraum bewegen und somit unser Herz-Kreislauf-System stärken, ohne uns zu überfordern. Bei der Gesundheitszone handelt es sich sujektiv betrachtet, um ein leichtes und entspanntes Training.</string>
    <string name="info_interpretation_detail_fettverbrennungszone">\u2022optimale Fettverbrennung für etwas geübtere Sportler \n\u2022weitere Kräftigung des Herz-Kreislauf-Systems \n\u2022Plaudertempo \n\u2022subjektive Belastung: leicht bis mittel \n\nDiese Zone spricht für sich, denn mit der Fettverbrennungszone wählen wir ein Trainingsprogramm, in der das Ziel liegt, sein Gewicht zu reduzieren. Trainiert man in diesem Bereich, so verbrennt der Körper die meisten Kalorien aus dem gespeicherten Fett. Die Fettverbrennungszone steht auch für ein "Plaudertraining", bei dessen Tempo man sich locker und ohne groß nach Luft zu schnappen unterhalten kann. Auf der Pulsuhr* sollten Werte zwichen 60-70 % der HFmax abzulesen sein. Auch auf das Herz-Kreislauf-System hat die Fettverbrennungszone positive Einflüsse und sie verbessert darüber hinaus die Widerstandsfähigkeit für langanhaltende Belastungen.</string>
    <string name="info_interpretation_detail_aerobe_Zone">\u2022Steigerung der Ausdauer \n\u2022Kräftigung des Herzens \n\u2022Ökonomisierung von Herz-Kreislauf- + Atmungssystem \n\u2022Verbesserung der aeroben Kapazität \n\u2022Erhöhung der Fettverbrennungsrate \n\u2022subjektive Belastung: mittel bis anstrengend \n\nBei einer Trainingsintensität von 70-80 % ist die aerobe Zone die nächsthöhere Belastungsstufe. Hier gerät man ins Schwitzen und bekommt das Gefühl, dass man richtig etwas tut. Die Plauderei während des Trainings sollte zwar gelegentlich möglich sein, ein stetes Plaudern wird jedoch zunehmend schwieriger. Das Training in der aeroben Zone steigert die Ausdauerfähigkeit, stärkt im besonderen Maße das Herz und das Atemsystem wird geschult und erhält die Fähigkeit, Sauerstoff zu den Muskeln zu transportieren. Bei einem Training, welches länger als 10 Minuten im Bereich von 70-80 % HFmax anhält, wird die Energie hauptsächlich unter Mithilfe von Sauerstoff bereitgestellt. Es herrscht eine Sauerstoffbalance, da sich die Sauerstoffaufnahme und der Sauerstoffbedarf im Gleichgewicht halten. Hierdurch kann eine Belastung über einen längeren Zeitraum erfolgen.</string>
    <string name="info_interpretation_detail_anaerobe_Zone">\u2022auch Entwicklungstraining genannt \n\u2022Verschiebung der anaeroben Schwelle nach oben \n\u2022Verbesserung des Milchsäureabbaus \n\u2022subjektive Belastung: anstrengend bis sehr anstrengend \n\nBefindet man sich in der anaeroben Zone sind lang anhaltende Belastungen kaum mehr möglich, da das Training zu intensiv wird und der verfügbare Sauerstoff zur Energiegewinnung nicht mehr ausreicht. Während der Organismus im aeroben Bereich die Energie unter Hinzunahme von Sauerstoff produziert, wird der Energiebedarf im anaeroben Bereich nur noch unter der Produktion von Laktat (Milchsäure) gedeckt. In der anaeroben Zone ist der primäre Trainingseffekt die Schulung des Körpers, die anfallende Milchsäure zu verstoffwechseln, also abzubauen. Ein zu langes Training führt dazu, dass zuviel Milchsäure im Muskel angehäuft wird, was dazu führt, das man das Training abbrechen muss. Der Bereich von 80-90 % HFmax eigent sich jedoch gut für ein Intervalltraining, in dem man sich ab und zu in diesem Bereich bewegt. Stark leistungsorientierte Ausdauersportler erzielen durch den Eintritt in diese Zone den höchsten Leistungszuwachs.</string>
    <string name="info_interpretation_detail_rote_Zone">\u2022maximale Belastung am absoluten Leistungslimit \n\u2022nur für professionelle Hochleistungssportler geeignet \n\u2022subjektive Belastung: extrem anstrengend \n\nDie rote Zone, auch Warnzone genannt, ist für Freizeitsportler kaum interessant. Bei einer solch hohen Trainingsintensität kann ein derart hartes Training nur einige Sekunden durchgehalten werden, da man sich am absoluten Leistungslimit bewegt. Selbst Weltklasse-Marathonläufer hätten hier Atemnot, würden sie auch nur wenige Sekunden in diesem Maximalbereich trainieren. Das Herz würde so hart arbeiten, dass man das Gefühl hätte, es würde zerplatzen. Daher muss diese Zone/Warnzone hier nicht weiter erklärt werden, da sie ist für unsere Trainingspraxis nicht relevant ist.</string>
    <string name="info_interpreation_source">Quelle: Die Interpretationen der verschiedenen Zonen stammen von <a href="https://lauftechnik.de/52-Die-5-Herzfrequenzzonen-den-optimalen-Trainingspuls-berechnen.htm">Lauftechnik.de</a></string>
    <string name="info_others_header">Sonstiges</string>
    <string name="info_others">\u2022 Die App verwendet die Bibliothek <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> zur Darstellung der Diagramme\n\u2022 Die Symbole stammen von der <a href="https://material.io/resources/icons/">Material Design</a> Seite\n\u2022 weitere Symbole stammen von flaticon vom Autor <a href="https://www.flaticon.com/authors/freepik">Freepik</a>\n\u2022 Die App verwendet die Bibliothek <a href="https://github.com/jianzhongli/MathView">MathView</a> zur Darstellung von mathematischen Formeln</string>
    <string name="settings_heading">Einstellungen</string>
    <string name="settings_label_age">Alter:</string>
    <string name="settings_label_weight">Gewicht:</string>
    <string name="settings_label_gender">Geschlecht:</string>
    <string name="settings_button_save">Speichern</string>
    <string name="settings_tab_input">Eingabe</string>
    <string name="settings_tab_result">Ergebnis</string>
    <string name="add_pulse_heading">Puls hinzufügen</string>
    <string name="add_pulse_label_pulse">Puls:</string>
    <string name="add_pulse_button_tap">Tap</string>
    <string name="add_pulse_button_save">Speichern</string>
    <string name="addPulse_label_unit">BPM</string>
    <string name="add_pulse_label_description">Beschreibung:</string>
    <string name="history_heading">Verlauf</string>
    <string name="history_detail_own_pulse_label">Eigener Puls</string>
    <string name="analytics_heading">Analyse</string>
</resources>