<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/info_header"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_header"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/info_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbarStyle="insideOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_header">

            <LinearLayout
                android:id="@+id/info_relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:paddingBottom="150dp">

                <TextView
                    android:id="@+id/info_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_formulaDescription"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_header_formula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/info_header_formula"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/info_legend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_legend"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_formulaMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_formulaMale"
                    android:textSize="13sp" />

                <io.github.kexanie.library.MathView
                    android:id="@+id/info_formula_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></io.github.kexanie.library.MathView>


                <TextView
                    android:id="@+id/info_formulaFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/info_formulaFemale"
                    android:textSize="13sp" />

                <io.github.kexanie.library.MathView
                    android:id="@+id/info_formula_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></io.github.kexanie.library.MathView>

                <TextView
                    android:id="@+id/info_header_range"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/info_header_range"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/info_parameter_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_parameter_age"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_parameter_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_parameter_weight"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_parameter_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_parameter_gender"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/info_header_interpretation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/info_header_interpretation"
                    android:textColor="@color/grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/info_interpretation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_interpretation"
                    android:textSize="13sp" />

                <TextView
                android:id="@+id/info_interpretation_gesundheitszone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/info_interpretation_gesundheitszone"
                android:textSize="13sp"
                    android:textColor="@color/grey"/>

                <TextView
                android:id="@+id/info_interpretation_fettverbrennungszone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/info_interpretation_fettverbrennungszone"
                android:textSize="13sp"
                    android:textColor="@color/turquoise"/>

                <TextView
                    android:id="@+id/info_interpretation_aerobe_Zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_interpretation_aerobe_Zone"
                    android:textSize="13sp"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/info_interpretation_anaerobe_Zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_interpretation_anaerobe_Zone"
                    android:textSize="13sp"
                    android:textColor="@color/orange"/>

                <TextView
                    android:id="@+id/info_interpretation_rote_Zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/info_interpretation_rote_Zone"
                    android:textSize="13sp"
                    android:textColor="@color/red"/>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/info_chart"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>