<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddPulseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addPulse_heading"
            style="@style/heading"
            android:text="@string/add_pulse_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/addPulse_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbarStyle="insideOverlay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPulse_heading">

            <LinearLayout
                android:id="@+id/info_svLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/addPulse_heading"
                    tools:layout_editor_absoluteX="16dp">

                    <TextView
                        android:id="@+id/addPulse_label_pulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="20dp"
                        android:text="@string/add_pulse_label_pulse" />

                    <NumberPicker
                        android:id="@+id/addPulse_input_pulse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/addPulse_label_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:text="@string/addPulse_label_unit"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:weightSum="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        android:id="@+id/add_pulse_label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/add_pulse_label_description" />

                    <EditText
                        android:id="@+id/add_pulse_input_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:inputType="textMultiLine" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/add_pulse_button_tap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_favorite"
                    android:backgroundTint="@color/red"
                    android:padding="60dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_touch_app" />

                <Button
                    android:id="@+id/add_pulse_button_save"
                    style="@style/AppTheme.SaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:text="@string/add_pulse_button_save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_pulse_button_tap" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>